--- a/CreatedFamousSaying/CreatedFamousSaying/Base.lproj/Main.storyboard
+++ b/CreatedFamousSaying/CreatedFamousSaying/Base.lproj/Main.storyboard
@@ -1,24 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CreatedFamousSaying" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 생성기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfb-vQ-aNl">
+                                <rect key="frame" x="24" y="83" width="345" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z8l-Zv-UEA">
+                                <rect key="frame" x="24" y="128" width="345" height="200"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3K-fu-4p5">
+                                        <rect key="frame" x="20" y="159" width="305" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3Q-zh-m2O">
+                                        <rect key="frame" x="20" y="20" width="305" height="119"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.93611819727891155" green="0.94448873299319724" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="O3Q-zh-m2O" firstAttribute="leading" secondItem="z8l-Zv-UEA" secondAttribute="leading" constant="20" id="84j-Xi-dsi"/>
+                                    <constraint firstItem="o3K-fu-4p5" firstAttribute="leading" secondItem="z8l-Zv-UEA" secondAttribute="leading" constant="20" id="BjE-kW-wuP"/>
+                                    <constraint firstAttribute="height" constant="200" id="DaM-Uq-bGJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="o3K-fu-4p5" secondAttribute="bottom" constant="20" id="P3y-VE-SoZ"/>
+                                    <constraint firstItem="O3Q-zh-m2O" firstAttribute="top" secondItem="z8l-Zv-UEA" secondAttribute="top" constant="20" id="RBn-Ig-bz8"/>
+                                    <constraint firstAttribute="trailing" secondItem="o3K-fu-4p5" secondAttribute="trailing" constant="20" id="Tqf-3n-qro"/>
+                                    <constraint firstAttribute="trailing" secondItem="O3Q-zh-m2O" secondAttribute="trailing" constant="20" id="Tvt-FX-KHr"/>
+                                    <constraint firstItem="o3K-fu-4p5" firstAttribute="top" secondItem="O3Q-zh-m2O" secondAttribute="bottom" constant="20" id="Zac-Sq-PPf"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yL9-77-buN">
+                                <rect key="frame" x="168.66666666666666" y="348" width="56" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="명언 생성"/>
+                                <connections>
+                                    <action selector="tapQuoteGeneratorBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ONY-4z-7MD"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Gfb-vQ-aNl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="6rc-BR-wdU"/>
+                            <constraint firstItem="yL9-77-buN" firstAttribute="centerX" secondItem="z8l-Zv-UEA" secondAttribute="centerX" id="DDr-is-Js7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gfb-vQ-aNl" secondAttribute="trailing" constant="24" id="N3X-Rp-o3X"/>
+                            <constraint firstItem="yL9-77-buN" firstAttribute="top" secondItem="z8l-Zv-UEA" secondAttribute="bottom" constant="20" id="NjC-7y-8l4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="z8l-Zv-UEA" secondAttribute="trailing" constant="24" id="XWR-Aa-fgM"/>
+                            <constraint firstItem="z8l-Zv-UEA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="h1C-s7-PwE"/>
+                            <constraint firstItem="z8l-Zv-UEA" firstAttribute="top" secondItem="Gfb-vQ-aNl" secondAttribute="bottom" constant="24" id="lzg-bO-G4Y"/>
+                            <constraint firstItem="Gfb-vQ-aNl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="zi5-Rf-R77"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="contentsLabel" destination="o3K-fu-4p5" id="di0-em-zr6"/>
+                        <outlet property="nameLabel" destination="O3Q-zh-m2O" id="nh6-u7-pl6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-48" y="4"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
