Feat: MVP 패턴을 사용하여 북도서 리뷰 앱 완성하기

--- a/DiaryApp/DiaryApp/Base.lproj/Main.storyboard
+++ b/DiaryApp/DiaryApp/Base.lproj/Main.storyboard
@@ -176,7 +176,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BdS-eG-xbm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2656" y="4"/>
+            <point key="canvasLocation" x="2655.7251908396947" y="3.5211267605633805"/>
         </scene>
         <!--StarVC-->
         <scene sceneID="2cm-96-15t">
@@ -205,7 +205,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Ysy-6r-Wv4">
-                                                    <rect key="frame" x="20.000000000000004" y="14" width="41.333333333333343" height="52.666666666666657"/>
+                                                    <rect key="frame" x="20" y="14" width="41.333333333333336" height="52.666666666666657"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oqa-jd-gsD">
                                                             <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
